Implemented calculation of number of sensors

--- a/EE4540.ipynb
+++ b/EE4540.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "5cfebbcb",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "9e49e96e",
    "metadata": {},
    "outputs": [
@@ -94,20 +94,20 @@
    ],
    "source": [
     "# Parameters\n",
-    "area_size = 100  # meters\n",
+    "AREA_WIDTH = 100  # meters\n",
     "num_sensors = 50  # Change this to your desired number of sensors\n",
     "\n",
     "# Generate random sensor positions\n",
     "np.random.seed(42)  # For reproducibility\n",
-    "sensor_x = np.random.uniform(0, area_size, num_sensors)\n",
-    "sensor_y = np.random.uniform(0, area_size, num_sensors)\n",
+    "sensor_x = np.random.uniform(0, AREA_WIDTH, num_sensors)\n",
+    "sensor_y = np.random.uniform(0, AREA_WIDTH, num_sensors)\n",
     "\n",
     "# Plot the grid and sensor positions\n",
     "plt.figure(figsize=(7, 7))\n",
     "plt.scatter(sensor_x, sensor_y, c='red', label='Sensors')\n",
-    "plt.xlim(0, area_size)\n",
-    "plt.ylim(0, area_size)\n",
-    "plt.title(f'Randomly Placed Sensors in {area_size}x{area_size} m² Area')\n",
+    "plt.xlim(0, AREA_WIDTH)\n",
+    "plt.ylim(0, AREA_WIDTH)\n",
+    "plt.title(f'Randomly Placed Sensors in {AREA_WIDTH}x{AREA_WIDTH} m² Area')\n",
     "plt.xlabel('X [m]')\n",
     "plt.ylabel('Y [m]')\n",
     "plt.grid(True)\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "e8fcf679",
    "metadata": {},
    "outputs": [
@@ -142,23 +142,26 @@
    ],
    "source": [
     "# Interconnect sensors that are within a certain communication radius\n",
-    "comm_radius = 20  # meters\n",
+    "RADIUS = 20  # meters\n",
     "\n",
     "plt.figure(figsize=(7, 7))\n",
     "plt.scatter(sensor_x, sensor_y, c='red', label='Sensors')\n",
     "\n",
-    "# Draw lines between sensors that are close enough\n",
+    "# Vectorized computation of pairwise distances\n",
+    "coords = np.vstack((sensor_x, sensor_y)).T\n",
+    "dists = np.sqrt(np.sum((coords[:, None, :] - coords[None, :, :])**2, axis=-1))\n",
+    "adjacency = (dists <= RADIUS) & (dists > 0)\n",
+    "\n",
+    "# Draw lines for all pairs within radius\n",
     "for i in range(num_sensors):\n",
-    "    for j in range(i + 1, num_sensors):\n",
-    "        dx = sensor_x[i] - sensor_x[j]\n",
-    "        dy = sensor_y[i] - sensor_y[j]\n",
-    "        dist = np.sqrt(dx**2 + dy**2)\n",
-    "        if dist <= comm_radius:\n",
+    "    neighbors = np.where(adjacency[i])[0]\n",
+    "    for j in neighbors:\n",
+    "        if i < j:  # Avoid duplicate lines\n",
     "            plt.plot([sensor_x[i], sensor_x[j]], [sensor_y[i], sensor_y[j]], 'b-', alpha=0.3)\n",
     "\n",
-    "plt.xlim(0, area_size)\n",
-    "plt.ylim(0, area_size)\n",
-    "plt.title(f'Sensor Network with Connections (radius = {comm_radius} m)')\n",
+    "plt.xlim(0, AREA_WIDTH)\n",
+    "plt.ylim(0, AREA_WIDTH)\n",
+    "plt.title(f'Sensor Network with Connections (radius = {RADIUS} m)')\n",
     "plt.xlabel('X [m]')\n",
     "plt.ylabel('Y [m]')\n",
     "plt.grid(True)\n",
@@ -167,9 +170,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A $d$-dimensional geometric random graph on $n$ nodes, denoted as $G^d(n, r)$, models a wireless ad-hoc network of nodes with wireless transmission radius $r$.\n",
+    "\n",
+    "- Place $n$ nodes in a $d$-dimensional unit cube uniformly at random  \n",
+    "- Connect any two nodes that are within distance $r$ of each other  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Property:**\n",
+    "\n",
+    "For $r^d \\geq \\dfrac{2 \\log(n)}{n}$, the graph $G^d(n, r)$ is connected with probability at least  $1 - \\dfrac{1}{n^2}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0c561897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum required radius for connectivity with high probability (n=50, area=100x100): 39.56 m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute minimum required radius for connectivity in 2D\n",
+    "n = num_sensors\n",
+    "DIMENSION = np.shape(coords)[1]  # Number of dimensions (2D in this case)\n",
+    "# Use np.power for general d-dimensional case\n",
+    "unit_cube_radius = np.power(2 * np.log(n) / n, 1 / DIMENSION)\n",
+    "required_radius = unit_cube_radius * AREA_WIDTH  # scale to area\n",
+    "\n",
+    "print(f\"Minimum required radius for connectivity with high probability (n={n}, area={AREA_WIDTH}x{AREA_WIDTH}): {required_radius:.2f} m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum number of sensors for radius 20 m and area 100x100: 283\n",
+      "Probability of connectivity with 50 sensors and radius 20 m: 99.9988%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a desired communication radius, calculate the minimum number of sensors for connectivity (with high probability)\n",
+    "\n",
+    "DESIRED_RADIUS = 20  # meters, set your desired radius here\n",
+    "DIMENSION = np.shape(coords)[1]  # Number of dimensions (2D in this case)\n",
+    "\n",
+    "# Rearranged formula: n >= 2 * log(n) / (r^d)\n",
+    "# We'll solve for n numerically since n appears on both sides\n",
+    "\n",
+    "def min_sensors_for_radius(desired_radius, area_width, dimension):\n",
+    "    unit_radius = desired_radius / area_width\n",
+    "    radius_term = 0.5*unit_radius ** dimension\n",
+    "\n",
+    "    # Use a simple iterative approach\n",
+    "    n_guess = 2\n",
+    "    while True:\n",
+    "        n_term = np.log(n_guess) / n_guess\n",
+    "        if radius_term >= n_term:\n",
+    "            return n_guess\n",
+    "        n_guess += 1\n",
+    "\n",
+    "min_n = min_sensors_for_radius(DESIRED_RADIUS,AREA_WIDTH, DIMENSION)\n",
+    "print(f\"Minimum number of sensors for radius {DESIRED_RADIUS} m and area {AREA_WIDTH}x{AREA_WIDTH}: {min_n}\")\n",
+    "\n",
+    "probability_of_connectivity = (1 - 1 / min_n**2)*100  # Simplified probability of connectivity\n",
+    "\n",
+    "print(f\"Probability of connectivity with {num_sensors} sensors and radius {DESIRED_RADIUS} m: {probability_of_connectivity:.4f}%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c561897",
+   "id": "c9d5bb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate random geometric graphs and compute connectivity empirically using Laplacian eigenvalues\n",
+    "num_sensor_list = np.arange(10, 401, 10)  # From 10 to 400 sensors in steps of 10\n",
+    "radii_list = np.arange(5, 51, 5)  # From 5 to 50 meters in steps of \n",
+    "connectivity_probabilities = []\n",
+    "\n",
+    "for num_sensor in num_sensor_list:\n",
+    "    for radius in radii_list:\n",
+    "        # Generate random geomtric graph\n",
+    "        # TODO: implement random graph function\n",
+    "        # graph = generate_random_geometric_graph(num_sensor, radius, AREA_WIDTH)\n",
+    "\n",
+    "        # Calculate Laplacian matrix and its eigenvalues\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Randomized Gossip Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
