Fixed name and student number

--- a/EE4540-assignment1.ipynb
+++ b/EE4540-assignment1.ipynb
@@ -8,7 +8,7 @@
     "# EE4540 Project assignment\n",
     "\n",
     "Joost Jaspers 5372925  \n",
-    "Zakaria Hayati"
+    "Zakaria Hayaty 5231817"
    ]
   },
   {
